plugins {
 	id 'distribution'
}

// Java project
apply plugin: 'java'

// Executable
apply plugin: 'application'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}


// Repositories providers
repositories {
	// Gearman
	maven { url "https://oss.sonatype.org/content/repositories/snapshots"}

    mavenCentral()
}

dependencies {
	implementation "junit:junit:4.12"     


	implementation ":jOptions"
	implementation ":SpecsUtils"
	implementation ":JsEngine"

	implementation ":LanguageSpecification"
	implementation ":LaraFramework"
	implementation ":LaraUtils"
	implementation ":LARAI"
	implementation ":WeaverInterface"
	
	implementation ":AnyAst"

}

java {
	withSourcesJar()
}

// Project sources
sourceSets {
   main {
      java {
         srcDir 'src'
      }

	  resources {
		srcDir 'resources'
	  }      
   }
	
   /*
   test {
      java {
         srcDir 'test'
      }
	  
	  resources {
		srcDir 'resources'
	  }
   }
   */
   
}

application {
    mainClass.set("pt.up.fe.specs.anycompiler.weaver.AnyWeaverLauncher")
}
